# caf_qca-wifi-host-cmn

cfg/inc/: cfg_converged.h  cfg_define.h
cfg/src/: cfg.c
configs/wlan_cfg/: ap_wlan_cfg.config
dp/cmn_dp_api/: dp_cal_client_api.c  dp_ratetable.c  dp_ratetable.h
dp/inc/: cdp_txrx_cmn.h  cdp_txrx_cmn_reg.h  cdp_txrx_cmn_struct.h  cdp_txrx_ctrl.h  cdp_txrx_extd_struct.h  cdp_txrx_flow_ctrl_legacy.h  cdp_txrx_fse.h  cdp_txrx_hist_struct.h  cdp_txrx_host_stats.h  cdp_txrx_ipa.h  cdp_txrx_me.h  cdp_txrx_misc.h  cdp_txrx_mob_def.h  cdp_txrx_mon.h  cdp_txrx_mon_struct.h  cdp_txrx_ops.h  cdp_txrx_peer_ops.h  cdp_txrx_ppe.h  cdp_txrx_sawf.h  cdp_txrx_stats_struct.h  dp_lite_mon_pub.h
dp/wifi3.0/: dp_hist.c  dp_hist.h  dp_htt.c  dp_htt.h  dp_htt_logger.c  dp_internal.h  dp_ipa.c  dp_ipa.h  dp_main.c  dp_mon_filter.c  dp_peer.c  dp_peer.h  dp_rings.h  dp_rings_main.c  dp_rx.c  dp_rx.h  dp_rx_buffer_pool.c  dp_rx_buffer_pool.h  dp_rx_defrag.c  dp_rx_defrag.h  dp_rx_desc.c  dp_rx_err.c  dp_rx_fst.c  dp_rx_mon_dest.c  dp_rx_mon_status.c  dp_rx_tag.c  dp_rx_tid.c  dp_sawf.c  dp_sawf.h  dp_sawf_htt.c  dp_stats.c  dp_tx.c  dp_tx.h  dp_tx_desc.c  dp_tx_desc.h  dp_tx_flow_control.c  (+5 more)
htc/: htc.c  htc_api.h  htc_credit_history.c  htc_internal.h  htc_recv.c  htc_send.c  htc_services.c
iot_sim/: Kbuild
qca_sawf/: qca_sawf.c  qca_sawf_if.h
qdf/: Kbuild
spectral/: Kbuild
tools/linux/telemetry/: CMakeLists.txt  stats_lib.c  stats_lib.h  stats_tool.c
tools/linux/telemetry/inc/: odd_defines.h  qcatools_lib.h
wlan_cfg/: cfg_dp.h  wlan_cfg.c  wlan_cfg.h  wlan_init_cfg.h
(+705 files in other folders)
